--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,21 +1,30 @@
 .container {
-    max-width: 1280px;
-    width: 100vw;
-    height: 100vh;
-    margin: 0 auto;
-    padding: 80px 0px;
-    display: flex;
-    justify-content: space-between;
+  max-width: 1280px;
+  width: 100vw;
+  height: 100vh;
+  margin: 0 auto;
+  padding: 80px 0px;
+  display: flex;
+  justify-content: space-between;
 }
 
 main {
-    width: 52%;
-    display: flex;
-    flex-direction: column;
-    gap: 100px;
-    margin-left: auto;
+  width: 52%;
+  display: flex;
+  flex-direction: column;
+  gap: 100px;
+  margin-left: auto;
+  overflow-y: scroll;
+
+  /* Esconde a barra de scroll no Chrome, Edge e Safari */
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* Internet Explorer e Edge antigo */
+}
+
+main::-webkit-scrollbar {
+  display: none; /* Chrome, Safari e Edge */
 }
 
 .highlight {
-    color: #E2E8F0;
+  color: #e2e8f0;
 }
