--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -1,37 +1,49 @@
 .cardContainer {
-    display: flex;
-    gap: 30px;
-    justify-content: space-between;
+  display: flex;
+  gap: 30px;
+  justify-content: space-between;
+  padding: 10px;
 }
 
 .cardContent {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 
 .cardDuration {
-    display: block;
-    min-width: fit-content;
-    color: #5e6d84;
+  display: block;
+  min-width: fit-content;
+  color: #5e6d84;
 }
 
 .cardPosition {
-    color: #dce4ee;
+  color: #dce4ee;
 }
 
 .tagList {
-    list-style-type: none;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 10px;
+  list-style-type: none;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
 }
 
 .tag {
-    font-size: 16px;
-    text-align: center;
-    color: #0BEFFF;
-    background-color: rgba(11, 239, 255, 0.075);
-    border-radius: 16px;
-    padding: 4px 12px;
+  font-size: 16px;
+  text-align: center;
+  color: #0befff;
+  background-color: rgba(11, 239, 255, 0.057);
+  border-radius: 16px;
+  padding: 4px 12px;
+}
+
+.companySite {
+  transition: 0.5s;
+  border-radius: 10px;
+}
+
+.companySite:hover {
+  cursor: pointer;
+  background-color: rgba(116, 116, 116, 0.075);
+  transition: 0.5s;
 }
