--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -3,13 +3,13 @@
   width: 100vw;
   height: 100vh;
   margin: 0 auto;
-  padding: 80px 0px;
+  padding: 80px 40px;
   display: flex;
   justify-content: space-between;
 }
 
 main {
-  width: 52%;
+  width: 50%;
   display: flex;
   flex-direction: column;
   gap: 100px;
@@ -28,3 +28,23 @@ main::-webkit-scrollbar {
 .highlight {
   color: #e2e8f0;
 }
+
+@media only screen and (max-width: 767px) {
+  .container {
+    flex-direction: column;
+    padding: 30px 40px;
+  }
+
+  main {
+    margin-left: 0;
+    gap: 60px;
+    width: 100%;
+  }
+}
+
+@media only screen and (max-width: 320px) {
+  .container {
+    padding: 30px 30px;
+  }
+}
+
