--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -2,6 +2,7 @@
   position: fixed;
   display: flex;
   width: 20%;
+  min-width: 300px;
   height: calc(100% - 160px);
   flex-direction: column;
   justify-content: space-between;
@@ -43,4 +44,24 @@ nav {
 
 .hoverIcon:hover {
   filter: brightness(1.5);
+}
+
+@media only screen and (max-width: 767px) {
+  .pageHeader {
+    position: static;
+    height: unset;
+    gap: 20px;
+    margin-bottom: 40px;
+    width: 80%;
+  }
+
+  nav {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 320px) {
+  .pageHeader {
+    min-width: unset;
+  }
 }
